[alias]
generate = sdist bdist_wheel

[metadata]
name = pathunstrom_splash
author = Piper Thunstrom
author_email = pathunstrom@gmail.com
description = Piper Thunstrom's game splash screen.
long_description = file: README.md
long_description_content_type = test/markdown
url = https://github.com/pathunstrom/splash-pathunstrom
license = Proprietary

[options]
packages =
    pathunstrom_splash
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
install_requires =
    ppb

[options.extras_require]
build =
    wheel
